# ESP32_ota

./: .cproject  .project  sdkconfig
main/: CMakeLists.txt  component.mk  main.c
main/Ethernet/: Ethernet_app.c  Ethernet_app.h
main/HTTPS_OTA/: https_ota.c  https_ota.h
main/MQTT/: MQTT_Handler.bak  MQTT_Handler.c  MQTT_Handler.h
main/NRF24L01/: NRF24L01.c  NRF24L01.h
main/OLED/: oled_font.h  oled_hw_spi.c  oled_hw_spi.h
main/SPI/: HW_SPI_Common.c  HW_SPI_Common.h
main/Storage/: Storage_nvs.c  Storage_nvs.h
